# skm

./: Cargo.toml  GEMINI.md  README.md  TODO.md  dist-workspace.toml
.github/workflows/: release.yml
src/: check.rs  config.rs  init.rs  link.rs  list.rs  main.rs  onboard.rs  pull.rs  push.rs  reset.rs  sync.rs  unlink.rs  update.rs  utils.rs
tests/: cli.rs
