[package]
name = "skm"
version = "0.1.9"
edition = "2021"
description = "A lightweight Skill Manager for Claude Agents"
repository = "https://github.com/jialrs/skm"
homepage = "https://github.com/jialrs/skm"
license = "MIT"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
walkdir = "2.5.0"
anyhow = "1.0.96"
home = "0.5.11"
dialoguer = "0.11.0"
clap_complete = "4.5.46"
self_update = "0.41.0"

[dev-dependencies]
tempfile = "3.17.1"
assert_cmd = "2.0.16"
predicates = "3.1.3"
serial_test = "3.2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
